# sherpa

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_skills/: __init__.py  cli.py  errors.py  providers.py  registry.py  runner.py  skill.py
src/agent_skills/skills/dockerfile-review/: SKILL.md
src/agent_skills/skills/k8s-crashloop/: SKILL.md
src/agent_skills/skills/postgres-diagnose/: SKILL.md
src/agent_skills/skills/stacktrace-explain/: SKILL.md
tests/: conftest.py  test_cli.py  test_providers.py  test_registry.py  test_runner.py  test_skill.py
