[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-skills-cli"
version = "0.1.0"
description = "Package expert knowledge as reusable AI agent skills and run them from your terminal."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Ridhima Goyal", email = "goyalridhima30@gmail.com" }]
keywords = ["ai", "agents", "llm", "skills", "cli", "devtools", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
skills = "agent_skills.cli:main"

[project.urls]
Homepage = "https://github.com/ridhima01/agent-skills-cli"
Issues = "https://github.com/ridhima01/agent-skills-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_skills"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=agent_skills --cov-report=term-missing"
